--- a/hello-common/hello-common-core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/hello-common/hello-common-core/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,3 +1,7 @@
 ok=\u4E00\u5207\u6B63\u5E38
 system.resource.not.found=\u627E\u4E0D\u5230\u6307\u5B9A\u8D44\u6E90
 system.execution.failure=\u7CFB\u7EDF\u6267\u884C\u5931\u8D25
+user.error=\u7528\u6237\u7AEF\u9519\u8BEF
+user.access.denied=\u6CA1\u6709\u6743\u9650\u8BBF\u95EE
+user.not.logged.in=\u8BF7\u5148\u767B\u5F55
+user.access.illegal=\u975E\u6CD5\u8BBF\u95EE
